# glp

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
api/: conftest.py  pytest.toml
api/api/: routers.py  settings.py  urls.py
api/bard/: apps.py  bard.py
api/grephql/: admin.py  apps.py  querys.py  schema.py
api/grephql/management/commands/: dev.py
api/grephql/query/: news.py
api/grephql/tests/: test_tmp.py
api/servetable/: apps.py
api/servetable/migrations/: 0001_initial.py
api/servetable/models/: __init__.py
api/servetable/models/test/: __init__.py  serve.py
api/table/: __init__.py  admin.py  models.py
api/table/migrations/: 0001_initial.py
api/table/models/: __init__.py  book.py  cash.py  test.py
api/table/models/news/: __init__.py  base.py  values.py
postgresql/: Dockerfile
